@@ -167,6 +167,9 @@
       <setting name="EnableCompression" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="HideBlacklistedImage" serializeAs="String">
+        <value>False</value>
+      </setting>
     </DanbooruDownloader3.Properties.Settings>
   </userSettings>
   <log4net>
